--- a/cost.mdx
+++ b/cost.mdx
@@ -1,45 +1,15 @@
 ---
-title: "Cost & Credits"
-description: "How Cardinal’s pricing and credit system works."
+title: "Cost"
+description: "How Cardinal's simple per-page pricing works."
 ---
 
 ### Cost & Pricing
 
-Cardinal uses a **tiered pricing model** based on credits.  
+Cardinal uses **simple per-page pricing** at **$0.03 per page**.  
 See full details on our [Pricing Page](https://trycardinal.ai/pricing).  
 
-Each plan includes a set number of credits per month, with higher tiers offering lower per-page cost and more volume.  
-
----
-
-### How Credits Work
-
-- **1 credit ≈ 1 page** of standard PDF or image extraction.  
-- **Complex documents** (dense tables, multi-column layouts, images, annotations) may consume **slightly more credits**.  
-- **Lightweight tasks** (e.g., classify/split runs, metadata-only checks) may consume **fewer credits**.  
-- **Batch uploads** are billed per page, so a 300-page PDF = ~300 credits.  
-
-This ensures you only pay for the actual work required — heavier pages cost more, lighter pages cost less.  
-
----
-
-### Examples
-
-- A simple text-only 2-page invoice → **~2 credits**.  
-- A 10-page construction spec with dozens of tiny tables → **~12–15 credits** (slightly higher due to table processing).  
-- A 50-page mixed medical record, classified first to isolate 10 pages of doctor’s notes → **~10 credits for classification + 10 credits for extraction**, instead of processing all 50.  
-
----
-
-### Why Credits?
-
-Credits make billing **predictable and flexible**:  
-- Scale up or down by plan tier.  
-- Handle a mix of light and heavy documents without surprise overages.  
-- Only pay for the work your documents actually need.  
-
----
+The more you use, the better rates you get with our volume discounts.
 
 <Note>
-For detailed plan breakdowns and volume discounts, visit our [Pricing Page](https://trycardinal.ai/pricing).
+For detailed volume discount tiers and pricing breakdowns, visit our [Pricing Page](https://trycardinal.ai/pricing).
 </Note>
