--- a/dense-tables.mdx
+++ b/dense-tables.mdx
@@ -21,6 +21,9 @@ For each table element, you'll receive:
 - **`text_content`** – extracted HTML/Markdown table text.  
 - **`html_code`** – cleaned HTML version of the table (when available).  
 
+![Example of dense PDF returned by the API](./images/dense_example.png)
+*Example: Detected dense PDF and accompanying content*
+
 ---
 
 ## How to Enable
