--- a/image-metadata.mdx
+++ b/image-metadata.mdx
@@ -15,6 +15,9 @@ These placeholders are not expanded in the Markdown itself.
 
 Instead, the corresponding metadata is provided separately in the `image_metadata` field of the API response.
 
+![Example of image metadata returned by the API](./images/image_metadata_example.png)
+*Example: Detected images and accompanying metadata*
+
 ---
 
 ## How to Enable
