--- a/index.mdx
+++ b/index.mdx
@@ -9,17 +9,17 @@ description: "Transform any document into structured data"
 Cardinal's core API endpoints for document processing and data extraction:
 
 <CardGroup cols={3}>
-  <Card title="Partition" icon="scissors" href="/partition">
-    Partition documents into custom sections and separate multi-page files
+  <Card title="Split" icon="scissors" href="/split">
+    Classify docs, break apart multi-page files, auto-detect types
   </Card>
-  <Card title="Schema Extract" icon="database" href="/schema">
-    Extract structured data using custom schemas with precise field mapping
+  <Card title="Extract" icon="database" href="/extract">
+    Enter your schema, get a custom output
   </Card>
-  <Card title="Parse" icon="file-code" href="/parse">
-    Convert documents to clean markdown while preserving structure
+    <Card title="Markdown" icon="file-code" href="/markdown">
+    Get clean, readable text output that preserves layout
   </Card>
-  <Card title="Bounding Box" icon="square" href="/bounding-boxes">
-    Get precise coordinates for text, tables, and visual elements
+  <Card title="RAG" icon="square" href="/rag">
+    Chunk intelligently for retrieval and embedding workflows
   </Card>
 </CardGroup>
 
@@ -51,8 +51,8 @@ Enhanced processing capabilities and specialized tools:
 ## Recipes
 
 Complete workflows for common document processing scenarios:
-<Card title="Knowledge Base" icon="book" href="/recipes/rag-implementation">
-  Build searchable knowledge bases from unstructured documents with intelligent classification and semantic chunking
+<Card title="Build a RAG Pipeline" icon="book" href="/recipes/rag-implementation">
+  Build a searchable menu knowledge base
 </Card>
 
 <Card title="Supply Chain Document Processing" icon="package-search" href="/recipes/supply-chain">
