--- a/uptime.mdx
+++ b/uptime.mdx
@@ -15,7 +15,7 @@ Cardinal is designed for enterprise-grade reliability. Our infrastructure is bui
 - **Reliability:** APIs and workers are fully monitored, with automatic retries and recovery for failed tasks  
 - **Scalability:** autoscaling ensures large spikes in traffic are handled without downtime  
 
-You can track live uptime and incidents on our [Status Page](http://status.trycardinal.ai/)).  
+You can track live uptime and incidents on our [Status Page](http://status.trycardinal.ai/).  
 
 ---
 
