--- a/index.mdx
+++ b/index.mdx
@@ -51,16 +51,20 @@ Enhanced processing capabilities and specialized tools:
 ## Recipes
 
 Complete workflows for common document processing scenarios:
-<Card title="Build a RAG Pipeline" icon="book" href="/recipes/rag-implementation">
-  Build a searchable menu knowledge base
+<Card title="Medical Coding" icon="stethoscope" href="/recipes/medical-coding">
+  Extract structured diagnosis codes
 </Card>
 
-<Card title="Supply Chain Document Processing" icon="package-search" href="/recipes/supply-chain">
-  Step-by-step tutorial on processing logistics documents with Cardinal for perfect text extraction and custom LLM prompts for intelligent data parsing
+<Card title="Prior Authorization" icon="shield-check" href="/recipes/prior-auth">
+  Answer complex prior authorization questions by querying patient medical histories
 </Card>
 
-<Card title="Healthcare Workflows" icon="heart-pulse" href="/recipes/json-extraction">
-  Process medical records and clinical documentation with automated splitting, structured data extraction, and signature verification for compliance
+<Card title="RCM" icon="credit-card" href="/recipes/rcm">
+  Query patient billing records, insurance claims, and payment histories to answer revenue cycle questions
+</Card>
+
+<Card title="EHR Integration" icon="database" href="/recipes/ehr-integration">
+  Automatically populate structured EHR fields
 </Card>
 ---
 Need help? Contact us at **team@trycardinal.ai**
